Fix precedence of relative position in vertical modes.

Original code did not take writing mode into account.

BUG=695270

Review-Url: https://codereview.chromium.org/2712773003
Cr-Commit-Position: refs/heads/master@{#452758}

Former-commit-id: 0f97b71bdc98d3c785b329c21134f3925f51ff3a